<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/ellipse_1"
            android:layout_width="460dp"
            android:layout_height="460dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-215dp"
            android:layout_marginTop="269dp"
            android:layout_marginEnd="183dp"
            android:layout_marginBottom="173dp"
            android:background="@drawable/ellipse_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ellipse_2"
            android:layout_width="460dp"
            android:layout_height="460dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-32dp"
            android:layout_marginTop="522dp"
            android:layout_marginBottom="-80dp"
            android:background="@drawable/ellipse_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/backButtonImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/back_button"
            android:onClick="backButton1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_bac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="38dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center_horizontal"
            android:lineHeight="39sp"
            android:text="@string/welcome_bac"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButtonImageView" />

        <TextView
            android:id="@+id/enter_your_"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="38dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:lineHeight="22sp"
            android:text="@string/enter_your_"
            android:textColor="#565656"
            android:textSize="18sp"

            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_bac" />

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="333dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="100dp"
            android:text="@string/username"
            android:textColor="#6B6B6B"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_your_" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="-15dp"
            app:layout_constraintEnd_toEndOf="@+id/userNameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameText"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameInput"
                style="@style/text_field_font"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordNameText"
            android:layout_width="333dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="50dp"
            android:text="@string/password"
            android:textColor="#6B6B6B"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            style="@style/text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="-15dp"
            app:layout_constraintEnd_toEndOf="@+id/passwordNameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordNameText"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordNameInput"
                style="@style/text_field_font"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/button_style"
            android:layout_width="229dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="95dp"
            android:gravity="center"
            android:text="@string/logın"
            android:onClick="login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField2" />

        <TextView
            android:id="@+id/forgotten_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:text="@string/forgotten_p"
            android:textColor="#6B6B6B"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="@id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/or_create_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:lineHeight="18sp"
            android:onClick="newAccount"
            android:text="@string/or_create_a"
            android:textColor="#6B6B6B"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/forgotten_p"
            app:layout_constraintStart_toStartOf="@id/forgotten_p"
            app:layout_constraintTop_toBottomOf="@+id/forgotten_p" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>