<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateActivity">

        <ImageView
            android:id="@+id/ellipse_1"
            android:layout_width="643dp"
            android:layout_height="713dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-120dp"
            android:layout_marginTop="78dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ellipse_3" />

        <ImageButton
            android:id="@+id/backButtonImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="24dp"
            android:onClick="backButton2"
            android:background="@drawable/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="38dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/inter_extrabold"
            android:lineHeight="39sp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButtonImageView2" />

        <TextView
            android:id="@+id/emailNameText"
            android:layout_width="333dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="50dp"
            android:text="@string/enter_email_id"
            android:textColor="#6B6B6B"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="-15dp"
            style="@style/text_field"
            app:layout_constraintEnd_toEndOf="@+id/emailNameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailNameText"
            app:hintTextColor="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                style="@style/text_field_font"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/createUserNameText"
            android:layout_width="333dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="40dp"
            android:text="@string/create_username"
            android:textColor="#6B6B6B"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_field"
            android:layout_marginStart="29dp"
            android:layout_marginTop="-15dp"
            app:layout_constraintEnd_toEndOf="@+id/createUserNameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createUserNameText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameInput"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                style="@style/text_field_font"
                android:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/createPasswordNameText"
            android:layout_width="333dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="40dp"
            android:text="@string/create_passward"
            android:textColor="#6B6B6B"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="-15dp"
            style="@style/text_field"
            app:layout_constraintEnd_toEndOf="@+id/createPasswordNameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPasswordNameText"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                style="@style/text_field_font"
                android:background="@android:color/transparent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/signUpButton"
            style="@style/button_style"
            android:layout_width="229dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:onClick="signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>