<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GetStartedActivity">


        <ImageView
            android:id="@+id/ellipse_1"
            android:layout_width="460dp"
            android:layout_height="460dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="-106dp"
            android:layout_marginEnd="-63dp"
            android:layout_marginBottom="572dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ellipse_1" />

        <ImageView
            android:id="@+id/ellipse_2"
            android:layout_width="460dp"
            android:layout_height="460dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="214dp"
            android:layout_marginTop="147dp"
            android:layout_marginEnd="-246dp"
            android:layout_marginBottom="319dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ellipse_1" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="183.62dp"
            android:layout_height="103.28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="147.03dp"
            android:layout_marginTop="269.67dp"
            app:layout_constraintStart_toStartOf="@id/ellipse_1"
            app:layout_constraintTop_toTopOf="@id/ellipse_1"
            />


        <ImageView
            android:id="@+id/mark_group_1"
            android:layout_width="103dp"
            android:layout_height="103dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70.97dp"
            android:layout_marginTop="0.33dp"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView"
            app:srcCompat="@drawable/mask_group_1"

            />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="165.9dp"
            android:layout_height="248.85dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-4.11dp"
            android:layout_marginTop="99.85dp"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <ImageView
            android:id="@+id/mask_group"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1.08dp"
            android:layout_marginTop="19.48dp"
            android:layout_marginBottom="64.38dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@id/imageView2"
            app:layout_constraintTop_toTopOf="@id/imageView2"
            app:srcCompat="@drawable/mask_group_2" />

        <TextView
            android:id="@+id/let_s_get_s"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="300dp"
            android:gravity="top"
            android:lineSpacingExtra="-16sp"
            android:text="@string/let_s_get_s"
            android:textColor="@color/black"
            android:textSize="70sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/grow_togeth"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="500dp"
            android:lineHeight="24.2sp"
            android:text="@string/grow_togeth"
            android:textColor="@color/black"
            android:fontFamily="@font/inter"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rectangle_1"
            style="@style/button_style"
            android:layout_width="281dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="630dp"
            android:gravity="center"
            android:text="@string/joın_now"
            android:onClick="joinNowClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>